--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 
 
 #bridgeContainer {
-  background-image: url("img/backgroundUpdated.png");
+  background-image: url("img/background2.png");
   width: 300px;
   height: 250px;
 }
@@ -162,6 +162,7 @@ body {
   -webkit-animation-fill-mode: forwards;
   /*animation-delay: 10s;*/
   position: absolute;
+  
 }
 
 @-webkit-keyframes bounce {
