--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@ body {
 
 
 #bridgeContainer {
-  background-image: url("img/background2.png");
+  background-image: url("img/BG2.png");
+  
   width: 300px;
   height: 250px;
 }
 #bridge {
-  background-size: cover;
   width: 300px;
   height: 250px;
 }
@@ -19,6 +19,9 @@ body {
   z-index: 1;
   top: 152px;
 }
+
+
+
 
 .zoom {
   animation:move 3s ease; /* Change this to alternate to stop the loop. */
@@ -66,13 +69,7 @@ body {
     -o-transform: scale(1.0); /* Opera */
     -moz-transform: scale(1.0); /* Firefox */
   }
-    83.33% {
-    transform: scale(1.1);
-    -ms-transform: scale(1.1); /* IE 9 */
-    -webkit-transform: scale(1.1); /* Safari and Chrome */
-    -o-transform: scale(1.1); /* Opera */
-    -moz-transform: scale(1.1); /* Firefox */
-  }
+    
   100% {
     transform: scale(1.0);
     -ms-transform: scale(1.0); /* IE 9 */
@@ -108,10 +105,10 @@ body {
 .scratchEffect {
     z-index: 1;
     position: absolute;
-    top: 105px;
-    left: 188px;
+    top: 150px;
+    left: 135px;
     /*width: 32px;*/
-    height: 60px;
+    height: 35px;
     -webkit-animation: scratch 3s 500 linear;
 }
 
@@ -120,31 +117,31 @@ body {
       -webkit-transform: translate(0px, 0px);
     }
     10% {
-      -webkit-transform: translate(-30px, -20px);
+      -webkit-transform: translate(-15px, -15px);
     }
     20% {
-      -webkit-transform: translate(-60px, 0px);
+      -webkit-transform: translate(-25px, 0px);
     }
     30% {
-      -webkit-transform: translate(-90px, -20px);
+      -webkit-transform: translate(-35px, -15px);
     }
     40% {
-      -webkit-transform: translate(-120px, 0px);
+      -webkit-transform: translate(-45px, 0px);
     }
     50% {
-      -webkit-transform: translate(-150px, -20px);
+      -webkit-transform: translate(-55px, -15px);
     }
     60% {
-      -webkit-transform: translate(-120px, 0px);
+      -webkit-transform: translate(-45px, 0px);
     }
     70% {
-      -webkit-transform: translate(-90px, -20px);
+      -webkit-transform: translate(-35px, -15px);
     }
     80% {
-      -webkit-transform: translate(-60px, 0px);
+      -webkit-transform: translate(-25px, 0px);
     }
     90% {
-      -webkit-transform: translate(-30px, -20px);
+      -webkit-transform: translate(-15px, -15px);
     }
     100% {
       -webkit-transform: translate(0px, 0px);
@@ -162,7 +159,6 @@ body {
   -webkit-animation-fill-mode: forwards;
   /*animation-delay: 10s;*/
   position: absolute;
-  
 }
 
 @-webkit-keyframes bounce {
